--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5dfb9">  <td>21/11/17 14:22:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestNG.Longin()[pri:0, instance:web_ui.LoginTestNG@25084a1e]">Longin</td> 
-  <td>main@1961501712</td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>21/11/17 14:22:28</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTestNG.afterMethod()[pri:0, instance:web_ui.LoginTestNG@25084a1e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a5dfb9">  <td>21/11/17 14:22:28</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTestNG.beforeMethod()[pri:0, instance:web_ui.LoginTestNG@25084a1e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1961501712</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/09 16:26:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.webdriverselection()[pri:0, instance:web_ui.LoginTest@156b88f5]">&gt;&gt;webdriverselection</td> 
+<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/09 16:26:24</td>   <td>1916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:web_ui.LoginTest@156b88f5]">login</td> 
+  <td>main@1991371192</td>   <td></td> </tr>
 </table>
