--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676bab">  <td>22/02/09 16:26:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:web_ui.LoginTest@156b88f5]">login</td> 
-  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="676bab">  <td>22/02/09 16:26:22</td>   <td>-1916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.webdriverselection()[pri:0, instance:web_ui.LoginTest@156b88f5]">&gt;&gt;webdriverselection</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/21 16:55:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:1, instance:web_ui.LoginTest@4f2b503c]">login</td> 
+  <td>main@1561063579</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/21 16:55:31</td>   <td>7796</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.quit()[pri:0, instance:web_ui.LoginTest@4f2b503c]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1561063579</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/21 16:55:21</td>   <td>-1986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.webdriverselection()[pri:0, instance:web_ui.LoginTest@4f2b503c]">&gt;&gt;webdriverselection</td> 
+<td>&nbsp;</td>  <td>main@1561063579</td>   <td></td> </tr>
 </table>
