--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>login</td><td>Login.LoginProcess()[pri:0, instance:web_ui.Login@71def8f8]<br/></td></tr>
-<tr><td>login_positive</td><td>Login.LoginProcess()[pri:0, instance:web_ui.Login@71def8f8]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>OrderFlow</td><td>OrderPopularMedicine.OrderMedicineProcess()[pri:0, instance:web_ui.OrderPopularMedicine@2ed2d9cb]<br/>OrderMedicinceByCategory.OrderMedicineFrom_AcidReflux()[pri:0, instance:web_ui.OrderMedicinceByCategory@593aaf41]<br/>OrderPaymentByCard.OrderPaymentByCardProcess()[pri:0, instance:web_ui.OrderPaymentByCard@5a56cdac]<br/></td></tr>
 </table>
