--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676bab">  <td>22/02/23 16:17:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.LoginProcess()[pri:0, instance:web_ui.Login@71def8f8]">LoginProcess</td> 
-  <td>main@1392794732</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/23 16:17:37</td>   <td>2103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:1, instance:web_ui.LoginTest@434a63ab]">login</td> 
-  <td>main@1392794732</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/23 16:18:34</td>   <td>58659</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.quit()[pri:0, instance:web_ui.LoginTest@434a63ab]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1392794732</td>   <td></td> </tr>
-<tr bgcolor="7babf5">  <td>22/02/23 16:17:35</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.webdriverselection()[pri:0, instance:web_ui.LoginTest@434a63ab]">&gt;&gt;webdriverselection</td> 
-<td>&nbsp;</td>  <td>main@1392794732</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>22/03/02 18:20:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrderPaymentByCard.ChromeSelection()[pri:0, instance:web_ui.OrderPaymentByCard@5a56cdac]">&gt;&gt;ChromeSelection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/03/02 18:20:37</td>   <td>-3560</td> <td>&nbsp;</td><td title="&gt;&gt;OrderMedicinceByCategory.ChromeSelection()[pri:0, instance:web_ui.OrderMedicinceByCategory@593aaf41]">&gt;&gt;ChromeSelection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/02 18:20:42</td>   <td>980</td> <td>&nbsp;</td><td title="&gt;&gt;OrderPopularMedicine.ChromeSelection()[pri:0, instance:web_ui.OrderPopularMedicine@2ed2d9cb]">&gt;&gt;ChromeSelection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/02 18:20:43</td>   <td>1954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderPopularMedicine.LoginProcess()[pri:0, instance:web_ui.OrderPopularMedicine@2ed2d9cb]">&gt;&gt;LoginProcess</td> 
+<td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>22/03/02 18:21:28</td>   <td>47219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderPaymentByCard.LoginProcess()[pri:0, instance:web_ui.OrderPaymentByCard@5a56cdac]">&gt;&gt;LoginProcess</td> 
+<td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/03/02 18:20:59</td>   <td>18135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderMedicinceByCategory.LoginProcess()[pri:0, instance:web_ui.OrderMedicinceByCategory@593aaf41]">&gt;&gt;LoginProcess</td> 
+<td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/03/02 18:21:06</td>   <td>24978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderMedicinceByCategory.OrderMedicineFrom_AcidReflux()[pri:0, instance:web_ui.OrderMedicinceByCategory@593aaf41]">OrderMedicineFrom_AcidReflux</td> 
+  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/02 18:20:49</td>   <td>8494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPopularMedicine.OrderMedicineProcess()[pri:0, instance:web_ui.OrderPopularMedicine@2ed2d9cb]">OrderMedicineProcess</td> 
+  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>22/03/02 18:21:35</td>   <td>53899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPaymentByCard.OrderPaymentByCardProcess()[pri:0, instance:web_ui.OrderPaymentByCard@5a56cdac]">OrderPaymentByCardProcess</td> 
+  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>22/03/02 18:22:09</td>   <td>87682</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPaymentByCard.quit()[pri:0, instance:web_ui.OrderPaymentByCard@5a56cdac]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="7babf5">  <td>22/03/02 18:22:08</td>   <td>87323</td> <td>&nbsp;</td><td title="&lt;&lt;OrderMedicinceByCategory.quit()[pri:0, instance:web_ui.OrderMedicinceByCategory@593aaf41]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/03/02 18:22:09</td>   <td>87931</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPopularMedicine.quit()[pri:0, instance:web_ui.OrderPopularMedicine@2ed2d9cb]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
 </table>
