--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>web_ui.LoginTest</td>
+<td>web_ui.QuickOrder</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>login</td>
-<td>&nbsp;</td></tr>
+<td>quickorderprocess</td>
+<td>OrderFlow </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -21,7 +22,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>webdriverselection</td>
+<td>LoginProcess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
