--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>The data"3351291126"Entered</td></tr>
-<tr><td>The data"Azam1234567"Entered</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
