--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -31,6 +31,33 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>web_ui.QuickOrder</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>quickorderprocess</td>
+<td>OrderFlow </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginProcess</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>web_ui.OrderPaymentByCard</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
